--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="picture">
       <div class="picture_basic">
         <div class="overlay">
-          <img class="view_overlay_icon" src="images/icon-view.svg">
+          <img class="view_overlay_icon" src="images/icon-view.svg" alt="view icon">
         </div>
       </div>
 
